--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>lp practice</title>
 <link rel="stylesheet" href="style.css">
 </head>
+<body>    
 <header class="header">
     <div class="header-wrap">
         <h1 class="header-logo">estra inc.</h1>
